# 2048

./: CMakeLists.txt  Readme.md  main.cpp
src/: game.cpp  game.h
src/engine/: engine.cpp  engine.h
src/ui/: text_ui.cpp  text_ui.h  ui.h
